--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,16 +62,13 @@
         android:layout_width="145dp"
         android:layout_height="68dp"
         android:text="@string/login"
+        style="@style/DefaultButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.612"
         tools:ignore="MissingConstraints"
-        android:textSize="30dp"
-        android:backgroundTint="#79B2DD"
-        android:textColor="@color/black"
-        android:textAllCaps="false"
         android:fontFamily="sans-serif-medium"
         />
 
