--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,9 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColorHint">#000000</item>
+        <item name="android:textStyle">bold</item>
+
     </style>
 
     <style name="TransparentButton">
@@ -29,4 +32,20 @@
         <item name="android:textStyle">bold</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <style name="Redbutton">
+        <item name="android:textSize">30dp</item>
+        <item name="android:backgroundTint">#FF0000</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DefaultTextView">
+        <item name="android:textSize">25dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+
 </resources>
