--- a/app/src/main/res/layout/fragment_utilities.xml
+++ b/app/src/main/res/layout/fragment_utilities.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -10,12 +10,7 @@
         android:layout_width="48dp"
         android:layout_height="52dp"
         android:src="@drawable/currentwhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.019" />
+ />
 
     <Switch
         android:id="@+id/darkmode"
@@ -25,13 +20,7 @@
         android:scaleX="1.50"
         android:scaleY="1.50"
         android:trackTint="#79B2DD"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.082"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
+ />
 
     <Spinner
         android:id="@+id/spinner_ejemplo"
@@ -39,11 +28,6 @@
         android:layout_height="38dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
+ />
 
 </FrameLayout>
