Login users with API

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowSoftInputMode="adjustPan"
-    tools:context=".EditProfile">
+    tools:context=".activities.EditProfile">
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -64,12 +64,12 @@
         style="@style/TransparentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/editProfile"
+        android:text="@string/changePphoto"
         android:textColor="#0844fc"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.311"
