--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".activities.Login">
 
 
     <FrameLayout
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.254" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/email"
         android:layout_width="298dp"
         android:layout_height="43dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,11 +42,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.399"
         tools:ignore="MissingConstraints"
-        android:hint="@string/username"
+        android:hint="@string/email"
         />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/password"
         android:layout_width="298dp"
         android:layout_height="43dp"
         app:layout_constraintBottom_toBottomOf="parent"
