--- a/app/src/main/res/layout/home_item_layout.xml
+++ b/app/src/main/res/layout/home_item_layout.xml
@@ -16,12 +16,13 @@
     android:id="@+id/profileName"
     android:layout_width="100dp"
     android:layout_height="66dp"
-    android:text="Texto"/>
+    android:text="Texto"
+    android:gravity="center_vertical"/>
 
 <!-- Agrega el botón con la imagen de 3 puntos -->
 <ImageButton
     android:id="@+id/moreButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="100dp"
+    android:layout_height="66dp"
     android:src="@drawable/ic_more"/>
 </LinearLayout>
