--- a/app/src/main/res/layout/home_item_layout.xml
+++ b/app/src/main/res/layout/home_item_layout.xml
@@ -1,26 +1,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <!-- Agrega la imagen -->
-    <ImageView
-        android:id="@+id/myImage"
-        android:layout_width="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_profile"/>
+        android:orientation="horizontal"
+        android:background="@drawable/black_border">
 
-    <!-- Agrega el texto -->
+        <!-- Agrega la imagen -->
+        <ImageView
+            android:id="@+id/myImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_profile"/>
+
+        <!-- Agrega el texto -->
+        <TextView
+            android:id="@+id/profileName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="Texto"/>
+
+        <!-- Agrega el botón con la imagen de 3 puntos -->
+        <ImageButton
+            android:id="@+id/moreButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_more" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/profileName"
-        android:layout_width="wrap_content"
+        android:id="@+id/rectangleWithText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Texto"/>
-
-    <!-- Agrega el botón con la imagen de 3 puntos -->
-    <ImageButton
-        android:id="@+id/moreButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_more"/>
+        android:background="@drawable/rectangle_background"
+        android:padding="16dp" />
 </LinearLayout>
