--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,6 +7,12 @@
     android:windowSoftInputMode="adjustPan"
     tools:context=".activities.EditProfile">
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="323dp"
