--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -186,9 +186,8 @@
         android:scrollbars="vertical"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="478dp"
-        tools:ignore="MissingConstraints"
+        tools:ignore="MissingConstraints" />
 
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
